<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.RutinesElement"
    android:padding="6dp"
    >

    <TextView
        android:textSize="@dimen/normal_text_size"

        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourLabel">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="@dimen/small_margin"
            android:textSize="@dimen/normal_text_size"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourLabel" />
    </ScrollView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days">


        <com.google.android.material.chip.Chip
            android:id="@+id/monday"
            android:text="@string/monday"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/tuesday"
            android:text="@string/tuesday"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/wendnesday"
            android:text="@string/wednesday"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/thursday"
            android:text="@string/thursday"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/friday"
            android:text="@string/friday"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/saturday"
            android:text="@string/saturday"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/sunday"
            android:text="@string/sunday"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.chip.ChipGroup>



    <TextView
        android:id="@+id/hourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />



    <Button
        android:id="@+id/selectHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/select_hour"
        android:layout_marginTop="@dimen/default_margin"
        android:textColor="?android:colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />


    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:text="@string/cancel"
        android:textColor="?android:colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectHour" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="?android:colorPrimary"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel" />




</androidx.constraintlayout.widget.ConstraintLayout>