<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Settings">


            <androidx.cardview.widget.CardView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:elevation="10dp"
                android:gravity="center"
                app:cardCornerRadius="100dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/avatar"
                    android:src="@drawable/shrek" />
            </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/image_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_edit"
        app:cardElevation="11dp"
        android:elevation="@dimen/padding_elevation"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2" />



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/settings_text"
            android:layout_marginEnd="5dp"
            tools:text="@string/name" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="@dimen/line_text_size"
            tools:text="@string/email" />


    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:context=".fragments.Settings">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/language"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:minWidth="120dp"
            android:layout_height="30dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/background"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            android:layout_marginStart="@dimen/default_margin">
            <Spinner
                android:layout_gravity="center"
                android:id="@+id/languages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/small_text_size"
                android:textAlignment="center"
                android:dropDownSelector="@color/colorAccent" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_margin"
            android:text="@string/mode"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            app:checkedButton="@+id/auto"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:selectionRequired="true"
            app:singleSelection="true"
            android:elevation="10dp">


            <Button
                android:id="@+id/light"
                style="@style/ToggleButtonWithIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_baseline_light_mode_24" />

            <Button
                android:id="@+id/auto"
                style="@style/ToggleButtonWithIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto"

                />

            <Button
                android:id="@+id/dark"
                style="@style/ToggleButtonWithIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_baseline_dark_mode_24" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/old_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_margin"
            android:text="@string/show_outdated"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/old_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:thumb="@drawable/thumb1"
            app:layout_constraintBottom_toBottomOf="@+id/old_label"
            app:layout_constraintStart_toEndOf="@+id/old_label"
            app:layout_constraintTop_toTopOf="@+id/old_label"
            app:showText="true"
            app:thumbTextPadding="4dp"
            app:track="@drawable/track1"
            android:textSize="@dimen/small_text_size"
            android:elevation="10dp"/>

        <TextView
            android:id="@+id/chart_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_margin"
            android:text="@string/chart"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="@+id/old_label"
            app:layout_constraintTop_toBottomOf="@+id/old_label" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/chart_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:textOff="@string/manually"
            android:textOn="@string/auto"
            android:thumb="@drawable/thumb2"
            android:layout_marginTop="@dimen/settings_margin"
            app:layout_constraintStart_toStartOf="@+id/chart_label"
            app:layout_constraintTop_toBottomOf="@+id/chart_label"
            android:textSize="@dimen/small_text_size"
            app:showText="true"
            app:thumbTextPadding="4dp"
            app:track="@drawable/track1" />


        <LinearLayout
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/small_padding"
            android:paddingStart="@dimen/current_colors_view_width"
            android:paddingEnd="@dimen/current_colors_view_width"
            app:layout_constraintBottom_toBottomOf="@+id/chart_switch"
            app:layout_constraintCircleRadius="@dimen/small_margin"
            app:layout_constraintStart_toEndOf="@+id/chart_switch"
            app:layout_constraintTop_toTopOf="@+id/chart_switch"
            android:layout_marginStart="@dimen/default_margin">


            <TextView
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                tools:text="Aim" />


        </LinearLayout>



        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/numberPicker" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:backgroundTint="@color/logout_button"
            android:textColor="@color/red"
            android:elevation="10dp"
            android:textSize="@dimen/small_text_size"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/old_label"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>





